--- a/packages/cpp-win32/package.json
+++ b/packages/cpp-win32/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "swift",
+  "name": "cpp-win32",
   "version": "1.0.0",
-  "description": "A demo module that exposes Swift code to Electron",
+  "description": "A demo module that exposes C++ code to Electron",
   "main": "js/index.js",
   "author": "Felix Rieseberg <felix@felixrieseberg.com>",
   "scripts": {
